--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "next": "11.1.2",
+    "node-sass": "4.14.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
+    "react-slick": "^0.28.1",
+    "react-toastify": "^8.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
